[package]
name = "dates-str"
version = "1.0.1"
edition = "2021"
description = "A really small date formatting library. Does not do fancy stuff"
authors = ["Pau Figueras Pavón <pau@pswsm.cat>"]
readme = "./README.md"
repository = "https://github.com/pswsm/dates-str/"
license = "MIT"
keywords = ["date", "dates"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.7.4"
