[package]
name = "dates-str"
version = "1.5.0"
edition = "2024"
description = "A minimal date formatting library. For if you don't need any fancy stuff."
authors = ["Pau Figueras Pavón <pau@pswsm.cat>"]
readme = "./README.md"
repository = "https://github.com/pswsm/dates-str/"
license = "MIT"
keywords = ["date", "dates"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
